Fixed some spacing issues.

--- a/style.css
+++ b/style.css
@@ -142,6 +142,10 @@ navbar {
 	color: #ffffff;
 }
 
+.blogListBlog:last-of-type
+{
+    margin-bottom: 1rem;
+}
 
 section {
     background-color: #021D39;
